# anti-rev

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  antirev_architecture.pptx  antirev_overview.html  antirev_overview.pptx  make_html_pdf.py  make_ppt.py
.claude/: settings.local.json
bench/: gen.py  gen_daemon_bench.py  measure.sh  measure_daemon.sh
cmake/: bin2h.py  cleanup_daemons.cmake  run_all_tests.cmake  run_test.cmake  test_tamper.cmake  test_wrong_key.cmake
doc/: dongle-integration.md
encryptor/: antirev-pack.py  build.py  encrypt_python.py  protect.py
stub/: aarch64_extend_shim.c  audit_shim.c  audit_shim_noop.c  crypto.c  crypto.h  daemon_client.c  daemon_client.h  dlopen_shim.c  exe_shim.c  obf.h  obfstr.h  stub.c
tests/: run_5_tests.sh  test_antirev_client.py
tests/aarch64_extend/: libreal_anti.c  main.c  run_test.sh
tests/concurrent_daemon/: libshared.c  run_test.sh  worker.c
tests/ctor_readlink/: libctor_readlink.cpp  main.c
tests/dlopen/: main.c  mylib.c  mylib.h
tests/dlopen_dt_needed/: libbar.c  libfoo.c  main.c
tests/dlopen_edgecases/: main.c
tests/dlopen_interpose/: libdup1.c  libdup2.c  libregistrar.c  libroot.c  main.c
tests/dlopen_nested/: libcallee.c  libcaller.c  main.c
tests/dlopen_reload/: libreload.c  main.c
tests/dlopen_transitive/: libbridge.c  libinner.c  libmiddle.c  main.c
tests/fd_reduction/: main.c
tests/fork_diff_lib/: child.c  libchild.c  libparent.c  parent.c
tests/fork_exec/: child.c  parent.c
tests/fork_same_lib/: child.c  parent.c
tests/hello/: main.c
tests/lib_daemon/: run_test.sh
tests/linked/: liblinkedmath.c  liblinkedmath.h  main.c
tests/many_libs/: gen_libs.py  libstress_01.c  libstress_02.c  libstress_03.c  libstress_04.c  libstress_05.c  libstress_06.c  libstress_07.c  libstress_08.c  libstress_09.c  libstress_10.c  libstress_11.c  libstress_12.c  libstress_13.c  libstress_14.c  libstress_15.c  libstress_16.c  libstress_17.c  libstress_18.c  libstress_19.c  libstress_20.c  main.c
tests/missing_syms/: run_test.sh
tests/multi_dt_needed/: libcalc.c  libformat.c  libvalidate.c  main.c
tests/multi_process/: grpc_daemon.c  libwork.c  libwork.h  pm.c  run_test.sh  work_process.c
tests/multi_so/: libmath.c  libmath.h  libstr.c  libstr.h  main.c
tests/nested_deps/: libinner.c  libouter.c  main.c
tests/obfstr/: main.c  run_test.sh
tests/opcua_enc/: proc_a.c  proc_b.c  run_test.sh
tests/path_stress/: main.c
tests/plain_exe_enc_so/: main.c
tests/plain_so/: main.c
tests/preload_memfd/: launcher.c  libpretest.c  main.c
tests/proc_self_exe/: main.c
tests/protobuf_json/: data.config  foo.proto  main.cc  run_test.sh
tests/python_client_daemon/: run_test.sh
tests/python_ctor_dlopen_chain/: build.sh  config_all_enc.yaml  config_mixed.yaml  libbar.c  libfoo.c  libzzz.c  test.py
tests/python_dlopen_chain/: .gitignore  build.sh  config.yaml  demo.py  libbar.c  libfoo.c  libtee.c
tests/python_reload/: run_test.sh
tests/realpath/: main.c
tests/script_multi_bin/: libA_only.c  libB_only.c  libcommon.c  proc_a.c  proc_b.c
tools/: aarch_clean.sh  antirev_client.py  check_collisions.py  check_duplibs.sh  check_encrypted.sh  check_env.sh  compare_dirs.sh  decode_wire_format.py  depgraph.py  diag_decodemap.sh  dump_memfd_libs.sh  find_dependents.sh  find_duplicate_proto.sh  find_message_registrations.sh  find_symbol_in_closure.json  find_symbol_in_closure.py  gen_obf.py  launch_with_env.py  missing_syms.py  obfstr_gen.py  popen_vfork_1_build.sh  popen_vfork_2_encrypt.sh  popen_vfork_3_run.sh  popen_vfork_repro.sh  protobuf_diag.sh  protobuf_json_diag_patch.txt  query_memory.sh  symbol_collision.py  test_popen.c
tools/json_trace/: build.sh  json_trace.cc
